--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <h1>SEKOLAH MENENGAH KEBANGSAAN SULTAN SALAHUDIN ABDUL AZIZ SHAH</h1>
-            <p>MISI | VISI | SEJARAH SEKOLAH</p>
+            <p>DISIPLIN DAN KONSISTENSI TERAS KECEMERLANGAN</p>
             <nav>
                 <ul>
                     <li><a href="#info">Maklumat</a></li>
